FIX - 底层优化